<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:contentDescription="logo"
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/lg" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_login"
        android:gravity="center"
        android:text="@string/fa_a_seu_login"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewFormLogin"
        style="@style/ContainerFormLogin" />


    <EditText

        android:id="@+id/input_email"
        android:inputType="textEmailAddress"
        style="@style/InputTextFormLogin"
        android:layout_alignStart="@id/viewFormLogin"
        android:layout_alignTop="@id/viewFormLogin"
        android:layout_alignEnd="@id/viewFormLogin"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/email" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/input_senha"
        style="@style/InputTextFormLogin"
        android:layout_below="@+id/input_email"
        android:layout_alignStart="@id/viewFormLogin"
        android:layout_alignEnd="@id/viewFormLogin"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/senha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonLogin"
        android:layout_below="@+id/input_senha"
        android:layout_alignStart="@id/viewFormLogin"
        android:layout_alignEnd="@id/viewFormLogin"
        android:text="@string/fazer_login" />

    <ProgressBar
        android:id="@+id/progrressBar"
        android:layout_width="wrap_content"
        android:layout_below="@+id/new_conta"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textsemconta"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFormLogin"
        android:gravity="center"
        android:text="@string/n_o_tem_uma_conta"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/new_conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textsemconta"
        android:gravity="center"
        android:text="@string/criar_conta"
        android:textSize="16sp"

        android:textStyle="bold" />


</RelativeLayout>
</androidx.core.widget.NestedScrollView>
